parent c05a0e2c8c08c460fb4d05cfdda30b3ad8deeaac author Moody Salem <moody.salem@gmail.com> 1636384652 -0500 committer Noah Zinsmeister <noahwz@gmail.com> 1652986554 -0400 gpgsig -----BEGIN PGP SIGNATURE-----
 iQIzBAABCAAdFiEE7vBrGL2nmKkkMsnegwIt1JGIyfIFAmKGkroACgkQgwIt1JGI
 yfLNxA//Q0ZB5eAyR6sMAnU/iiEay7+8oIiksF3rrWVmLZ6uLsy3wm0NkdoM1ac6
 BGDZVAQS8udVMaFkjeRBt9E1H419I+QPvxJ3XonbWxiO9SBa8OKQrZPVk7ooqzpp
 lNQ3DeTYWcC9ttiQVoZ/eVKjHh8u/itGMGZ4YfcBRUVyGgXG+d+MR+bQkeMh+jUH
 5hrd6LDgCXv87yD47jKyasfMaZRb5Q4cEZiXzB/l7k0wYp4at9oqa/+/K2TkZibW
 rsCLe4PO2V65TG+otuysrwNyUHNVbWidiCCBWURUgVpf9Sm+PWTWYqfAnK1WhGRC
 F8+FR+fQL1SGUg+U9zK2Es2DN9vWsWJyG1tivgHi3E8x0qxTA4wa59cioiqRWC8k
 easI5M1bNYCloXYvmveLIxZc1FeSsOHtw3KDJgOiQ/6rAS5gDmfMscerQtNuTqeO
 HutfxNElEki0LBihJDtwbccsrjPzuz+o5nZqlB7ZVyRqH7yjvTEO7HyYZAm2udGs
 GifORcw+EtnQupyXM8507CLT30DsaESwkKYkJYmHeiSHzIfHKnkOWVT8pLsbmaEQ
 UDAxpkti4ycg7M0HWzS/ATKZC8S4whx0OGgj+EXyiop6OBPvmNvHdqL1ga50IWn9
 pH/C+GZ+Voz9FuGRiVpf+H3eD0Z50gRKoi3iKKT86P1Mqd2UKu8=
 =h943
 -----END PGP SIGNATURE-----

compile in 0-8-9 first pass

Fix code style issues with Prettier

Fix code style issues with Prettier

Fix code style issues with Prettier

bump echidna version

remove liquidity math and low gas safe math

Fix code style issues with Prettier

first pass at 0.8.12 (#543)

* first pass at 0.8.12

* few cleanups on unchecked blocks

version bump

another round of cleanup

run CI on 0.8 branch

make contract fit under limit

custom errors

lower compiler runs

Fix code style issues with Prettier

remove view to fix tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "version": "1.0.1",
+  "version": "1.0.1-solc-0.8",
   "homepage": "https://uniswap.org",
   "keywords": [
     "uniswap",
