--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
   "dependencies": {},
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-etherscan": "^2.1.8",
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^4.0.0",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
     "decimal.js": "^10.2.1",
+    "dotenv": "^16.3.1",
     "ethereum-waffle": "^3.0.2",
     "ethers": "^5.0.8",
+    "fs": "^0.0.1-security",
     "hardhat": "^2.2.0",
     "hardhat-typechain": "^0.3.5",
     "mocha": "^6.2.2",
